--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# CMake.gitignore
+###################
+
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -7,3 +10,69 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+
+
+# C/C++.gitignore
+###################
+
+# Prerequisites
+*.d
+
+# (Compiled) Object files
+*.o
+*.ko
+*.obj
+*.elf
+*.slo
+*.lo
+*.obj
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# (Compiled Static) Libraries
+*.lib
+*.a
+*.la
+*.lo
+*.lai
+
+# Shared objects (inc. Windows DLLs)
+# Compiled Dynamic libraries
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# Fortran module files
+*.mod
+*.smod
